# yaml_lv_style

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
cmake/: FindYamlLvStyle.cmake  YamlLvStyleMacros.cmake  get-yaml_lv_style.cmake
doc/: style_properties.md  usage.md
example/: style.yaml
examples/: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
examples/cmake/: get-yaml_lv_style.cmake
examples/examples/grid/: CMakeLists.txt
examples/examples/grid/src/: main.c
examples/examples/grid/src/generated_styles/styles/include/generated_styles/: styles.h
examples/examples/grid/src/generated_styles/stylesheets/include/generated_styles/: stylesheet_grid.h  stylesheets.h
examples/examples/grid/src/generated_styles/stylesheets/src/: stylesheet_grid.c  stylesheets.c
examples/examples/grid/styles/: grid.yaml
examples/examples/simple_c/: CMakeLists.txt  README.md
examples/examples/simple_c/src/: main.c
examples/examples/simple_c/src/generated_styles/styles/include/generated_styles/: styles.h
examples/examples/simple_c/src/generated_styles/stylesheets/include/generated_styles/: stylesheet_dark.h  stylesheet_light.h  stylesheets.h
examples/examples/simple_c/src/generated_styles/stylesheets/src/: stylesheet_dark.c  stylesheet_light.c  stylesheets.c
examples/examples/simple_c/src/styles/styles/include/styles/: styles.h
examples/examples/simple_c/src/styles/stylesheets/include/styles/: stylesheet_dark.h  stylesheet_light.h  stylesheets.h
examples/examples/simple_c/src/styles/stylesheets/src/: stylesheet_dark.c  stylesheet_light.c  stylesheets.c
examples/examples/simple_c/styles/: dark.yaml  light.yaml
examples/examples/simple_cpp/: CMakeLists.txt  README.md
examples/examples/simple_cpp/src/: main.cpp
examples/examples/simple_cpp/src/generated_styles/styles/include/generated_styles/: styles.h
examples/examples/simple_cpp/src/generated_styles/stylesheets/include/generated_styles/: stylesheet_dark.h  stylesheet_light.h  stylesheets.h
examples/examples/simple_cpp/src/generated_styles/stylesheets/src/: stylesheet_dark.cpp  stylesheet_light.cpp  stylesheets.cpp
examples/examples/simple_cpp/src/styles/styles/include/styles/: styles.h
examples/examples/simple_cpp/src/styles/stylesheets/include/styles/: stylesheet_dark.h  stylesheet_light.h  stylesheets.h
examples/examples/simple_cpp/src/styles/stylesheets/src/: stylesheet_dark.cpp  stylesheet_light.cpp  stylesheets.cpp
examples/examples/simple_cpp/styles/: dark.yaml  light.yaml
examples/simple/: CMakeLists.txt  CMakePresets.json
examples/simple/cmake/: get-yaml_lv_style.cmake
examples/simple/conf/: lv_conf.h.in
examples/simple/src/: main.cpp
examples/simple/styles/: light.yaml
scripts/doc/: generate.py
src/: config.rs  errors.rs  generator.rs  main.rs  serde_stylesheet.rs
src/config/: cli.rs  file.rs
src/generator/: code_style.rs  format.rs  generation_ctx.rs  generator.rs  lang.rs  mod.rs  stylesheet_ctx.rs  tera_filters.rs
src/serde_stylesheet/: lv_properties.rs  lv_types.rs  properties.rs  style.rs  stylesheet.rs  types.rs
src/stylesheet/: lv_properties.rs  mod.rs  style.rs  stylesheet.rs
tests/: generation.rs  integration_test.rs
tests/tools/: assert.rs  helper.rs  mod.rs
tests/yaml/: test_colors.yaml  test_const_dyn.yaml  test_coords.yaml  test_enums.yaml  test_grid.yaml  (+2 more)
tests_lvgl_rendering/: CMakeLists.txt  CMakePresets.json
tests_lvgl_rendering/cmake/: dependencies.cmake  yaml_lv_style_add_test_case.cmake
tests_lvgl_rendering/src/: main.cpp
tests_lvgl_rendering/src/test_assets/: test_img_lvgl_logo_png.c
tests_lvgl_rendering/src/test_cases/test_arc/: test_arc.cpp
tests_lvgl_rendering/src/test_cases/test_arc/yaml/: arc.yaml
tests_lvgl_rendering/src/test_cases/test_background/: test_background.cpp
tests_lvgl_rendering/src/test_cases/test_background/yaml/: background.yaml
tests_lvgl_rendering/src/test_cases/test_blur/: test_blur.cpp
tests_lvgl_rendering/src/test_cases/test_blur/yaml/: blur.yaml
tests_lvgl_rendering/src/test_cases/test_border/: test_border.cpp
tests_lvgl_rendering/src/test_cases/test_border/yaml/: border.yaml
tests_lvgl_rendering/src/test_cases/test_drop_shadow/: test_drop_shadow.cpp
tests_lvgl_rendering/src/test_cases/test_drop_shadow/yaml/: drop_shadow.yaml
tests_lvgl_rendering/src/test_cases/test_flex/: test_flex.cpp
tests_lvgl_rendering/src/test_cases/test_flex/yaml/: flex.yaml
tests_lvgl_rendering/src/test_cases/test_grid/: test_grid.cpp
tests_lvgl_rendering/src/test_cases/test_grid/yaml/: grid.yaml
tests_lvgl_rendering/src/test_cases/test_image/: test_image.cpp
tests_lvgl_rendering/src/test_cases/test_image/yaml/: image.yaml
tests_lvgl_rendering/src/test_cases/test_line/: test_line.cpp
tests_lvgl_rendering/src/test_cases/test_line/yaml/: line.yaml
tests_lvgl_rendering/src/test_cases/test_margin/: test_margin.cpp
tests_lvgl_rendering/src/test_cases/test_margin/yaml/: margin.yaml
tests_lvgl_rendering/src/test_cases/test_miscellaneous/: test_miscellaneous.cpp
tests_lvgl_rendering/src/test_cases/test_miscellaneous/yaml/: misc.yaml
tests_lvgl_rendering/src/test_cases/test_outline/: test_outline.cpp
tests_lvgl_rendering/src/test_cases/test_outline/yaml/: outline.yaml
tests_lvgl_rendering/src/test_cases/test_padding/: test_padding.cpp
tests_lvgl_rendering/src/test_cases/test_padding/yaml/: padding.yaml
tests_lvgl_rendering/src/test_cases/test_shadow/: test_shadow.cpp
tests_lvgl_rendering/src/test_cases/test_shadow/yaml/: shadow.yaml
tests_lvgl_rendering/src/test_cases/test_size_and_position/: test_size_and_position.cpp
tests_lvgl_rendering/src/test_cases/test_size_and_position/yaml/: position.yaml  size.yaml  transform.yaml  translate.yaml
tests_lvgl_rendering/src/test_cases/test_text/: test_text.cpp
tests_lvgl_rendering/src/test_cases/test_text/yaml/: text.yaml
tests_lvgl_rendering/src/test_conf/: lv_test_conf.h
tests_lvgl_rendering/src/test_tools/: lv_macros.h  macros.h  test_macros.h
(+363 files in other folders)
