[package]
name = "yaml_lv_style"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
miette = { version = "7.6.0", features = ["fancy"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
thiserror = "2.0.18"
yaml_serde = "0.10.3"

[dev-dependencies]
assert_cmd = "2.1.2"
walkdir = "2.5.0"
pretty_assertions = "1.4.1"
similar = "2.7.0"
strum = "0.27.2"
strum_macros = "0.27.2"
tempfile = "3.25.0"
tree-sitter = "0.26.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
serde_json = "1.0.149"
